[gd_scene load_steps=52 format=3 uid="uid://ccqkv7lcd7ixi"]

[ext_resource type="Script" path="res://enemies/Necromancer/necromancer.gd" id="1_s7qq7"]
[ext_resource type="PackedScene" uid="uid://bxdxdfdqwgdvg" path="res://enemies/Necromancer/necro_orb.tscn" id="2_h5ylx"]
[ext_resource type="Texture2D" uid="uid://cph7fce1etuh5" path="res://enemies/Necromancer/Sprites/Necromancer_creativekind-Sheet.png" id="3_8cavw"]
[ext_resource type="AudioStream" uid="uid://d34jaqw1j4w38" path="res://enemies/Necromancer/Sounds/necromancer_cast.mp3" id="4_mbjvv"]
[ext_resource type="AudioStream" uid="uid://jbtg5n0pu0l5" path="res://enemies/Necromancer/Sounds/death.mp3" id="6_vl2tk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yobm6"]
atlas = ExtResource("3_8cavw")
region = Rect2(0, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qskp4"]
atlas = ExtResource("3_8cavw")
region = Rect2(160, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs5ut"]
atlas = ExtResource("3_8cavw")
region = Rect2(320, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmqrq"]
atlas = ExtResource("3_8cavw")
region = Rect2(480, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qxs1"]
atlas = ExtResource("3_8cavw")
region = Rect2(640, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfa1k"]
atlas = ExtResource("3_8cavw")
region = Rect2(800, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f8i1"]
atlas = ExtResource("3_8cavw")
region = Rect2(960, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iptet"]
atlas = ExtResource("3_8cavw")
region = Rect2(1120, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqo3m"]
atlas = ExtResource("3_8cavw")
region = Rect2(1280, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6qjt"]
atlas = ExtResource("3_8cavw")
region = Rect2(1440, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6obq"]
atlas = ExtResource("3_8cavw")
region = Rect2(1600, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hbks"]
atlas = ExtResource("3_8cavw")
region = Rect2(1760, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_13tpr"]
atlas = ExtResource("3_8cavw")
region = Rect2(1920, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_030s8"]
atlas = ExtResource("3_8cavw")
region = Rect2(0, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bl4ov"]
atlas = ExtResource("3_8cavw")
region = Rect2(160, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsoh7"]
atlas = ExtResource("3_8cavw")
region = Rect2(320, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy8w2"]
atlas = ExtResource("3_8cavw")
region = Rect2(480, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci3u2"]
atlas = ExtResource("3_8cavw")
region = Rect2(640, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5liga"]
atlas = ExtResource("3_8cavw")
region = Rect2(800, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5yrj"]
atlas = ExtResource("3_8cavw")
region = Rect2(960, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_licnm"]
atlas = ExtResource("3_8cavw")
region = Rect2(1120, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c1li"]
atlas = ExtResource("3_8cavw")
region = Rect2(1280, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcxcf"]
atlas = ExtResource("3_8cavw")
region = Rect2(0, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l685a"]
atlas = ExtResource("3_8cavw")
region = Rect2(160, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1naws"]
atlas = ExtResource("3_8cavw")
region = Rect2(320, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpmql"]
atlas = ExtResource("3_8cavw")
region = Rect2(480, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgbt2"]
atlas = ExtResource("3_8cavw")
region = Rect2(640, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1hsv"]
atlas = ExtResource("3_8cavw")
region = Rect2(0, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhuvq"]
atlas = ExtResource("3_8cavw")
region = Rect2(160, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuamd"]
atlas = ExtResource("3_8cavw")
region = Rect2(320, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_24yvo"]
atlas = ExtResource("3_8cavw")
region = Rect2(480, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2eexv"]
atlas = ExtResource("3_8cavw")
region = Rect2(640, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sykh6"]
atlas = ExtResource("3_8cavw")
region = Rect2(800, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_caydo"]
atlas = ExtResource("3_8cavw")
region = Rect2(960, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nifkf"]
atlas = ExtResource("3_8cavw")
region = Rect2(1120, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1xnj"]
atlas = ExtResource("3_8cavw")
region = Rect2(0, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2arf"]
atlas = ExtResource("3_8cavw")
region = Rect2(160, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lfyq"]
atlas = ExtResource("3_8cavw")
region = Rect2(320, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_adea8"]
atlas = ExtResource("3_8cavw")
region = Rect2(480, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul6wd"]
atlas = ExtResource("3_8cavw")
region = Rect2(640, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysi3u"]
atlas = ExtResource("3_8cavw")
region = Rect2(800, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0huc"]
atlas = ExtResource("3_8cavw")
region = Rect2(960, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_16dls"]
atlas = ExtResource("3_8cavw")
region = Rect2(1120, 128, 160, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_15a20"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yobm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qskp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs5ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmqrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qxs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfa1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f8i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iptet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqo3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6qjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6obq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hbks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13tpr")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_030s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl4ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsoh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy8w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci3u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5liga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5yrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_licnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c1li")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcxcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l685a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1naws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpmql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgbt2")
}],
"loop": false,
"name": &"hit",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1hsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhuvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuamd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24yvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2eexv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sykh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caydo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nifkf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1xnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2arf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lfyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adea8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul6wd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysi3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0huc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16dls")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fj6jj"]
radius = 338.428
height = 676.857

[sub_resource type="CircleShape2D" id="CircleShape2D_a2bel"]
radius = 551.044

[node name="EnemyNecro" type="CharacterBody2D" groups=["Enemy"]]
position = Vector2(954, 600)
scale = Vector2(1.4, 1.4)
script = ExtResource("1_s7qq7")
orb = ExtResource("2_h5ylx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -38)
scale = Vector2(1.425, 1.43359)
sprite_frames = SubResource("SpriteFrames_15a20")
animation = &"run"
autoplay = "idle"
frame_progress = 0.332657

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-231, -363)
polygon = PackedVector2Array(214.571, 391.571, 214.196, 388.08, 215.286, 372.286, 214.571, 360.857, 214.571, 348, 219.571, 341.571, 229.571, 335.857, 240.286, 338, 246.714, 344.429, 248.857, 351.571, 249.571, 358.714, 248.857, 370.857, 244.571, 385.143, 239.571, 395.143, 237.429, 397.286, 234.571, 398, 230.286, 398, 226, 398.714, 221, 397.286, 218.527, 395.627, 216.07, 394.244)

[node name="InnerSight" type="Area2D" parent="."]
position = Vector2(2, 1)

[node name="C" type="CollisionShape2D" parent="InnerSight"]
position = Vector2(0, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fj6jj")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(27, -52)

[node name="Sight" type="Area2D" parent="."]
position = Vector2(-1, 0)

[node name="C" type="CollisionShape2D" parent="Sight"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_a2bel")

[node name="orb_cast" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_mbjvv")
volume_db = -5.0

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_vl2tk")
volume_db = -30.0
pitch_scale = 0.9

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="InnerSight" to="." method="_on_inner_sight_body_entered"]
[connection signal="body_exited" from="InnerSight" to="." method="_on_inner_sight_body_exited"]
[connection signal="body_entered" from="Sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_sight_body_exited"]
